:sparkles: レスポンス指定・テストをちょっと強く
